# pinecone-datasets

./: pyproject.toml
