[tool.poetry]
name = "pinecone-datasets"
version = "0.6.1"
description = "Pinecone Datasets lets you easily load datasets into your Pinecone index."
authors = ["Pinecone Relevance Team <relevance@pinecone.io>"]
maintainers = [
    "Ilai Giloh <ilai@pinecone.io>",
    "Amnon Catav <amnon@pinecone.io>",
    "Roy Miara <miararoy@gmail.com>",
]
readme = "README.md"


[tool.poetry.dependencies]
python = "*"
pyarrow = "*"
fsspec = "*"
gcsfs = "*"
s3fs = "*"
pydantic = "*"
pandas = "*"
tqdm ="*"
pinecone-client = "*"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ipykernel = "*"
black = "*"
pytest-cov = "*"
mypy = "*"
pytest = "*"
pytest-html = "*"
pdoc = "*"
toml = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
